# kb

./: .gitignore  Cargo.toml  LICENSE  README.md
Formula/: kb.rb
src/: config.rs  input_parser.rs  lib.rs  main.rs
src/domain/: mod.rs
src/repo/: mod.rs  sqlite.rs
src/storage/: db.rs  migrations.rs  mod.rs
src/ui/: app.rs  mod.rs  render.rs  theme.rs
tests/: data_model_integration.rs
