[package]
name = "kb"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
rusqlite = { version = "0.37", features = ["bundled", "chrono", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.9"
uuid = { version = "1.18", features = ["serde", "v4"] }
